# fw4spl

./: CMakeLists.txt
Apps/: CMakeLists.txt
Apps/VRRender/: CMakeLists.txt
Apps/VRRender/rc/configurations/: sdb.xml
Bundles/: CMakeLists.txt
Bundles/LeafActivity/: CMakeLists.txt
Bundles/LeafActivity/2DVisualizationActivity/: CMakeLists.txt
Bundles/LeafActivity/2DVisualizationActivity/rc/: plugin.xml
Bundles/LeafActivity/3DVisualizationActivity/: CMakeLists.txt
Bundles/LeafActivity/3DVisualizationActivity/rc/: plugin.xml
Bundles/LeafActivity/blendActivity/: CMakeLists.txt
Bundles/LeafActivity/dicomAppConfig/: CMakeLists.txt
Bundles/LeafActivity/dicomFilteringActivity/: CMakeLists.txt
Bundles/LeafActivity/dicomPacsReaderActivity/: CMakeLists.txt
Bundles/LeafActivity/dicomPacsWriterActivity/: CMakeLists.txt
Bundles/LeafActivity/ioActivity/: CMakeLists.txt
Bundles/LeafActivity/volumeRenderingActivity/: CMakeLists.txt
Bundles/LeafActivity/volumeRenderingActivity/rc/: plugin.xml
Bundles/LeafAtomFilter/: CMakeLists.txt
Bundles/LeafAtomFilter/filterVRRender/: CMakeLists.txt
Bundles/LeafCtrl/: CMakeLists.txt
Bundles/LeafCtrl/ctrlCamp/: CMakeLists.txt
Bundles/LeafCtrl/ctrlMemory/: CMakeLists.txt
Bundles/LeafCtrl/ctrlSelection/: CMakeLists.txt
Bundles/LeafCtrl/monitor/: CMakeLists.txt
Bundles/LeafIO/: CMakeLists.txt
Bundles/LeafIO/ioAtoms/: CMakeLists.txt
Bundles/LeafIO/ioData/: CMakeLists.txt
Bundles/LeafIO/ioDcmtk/: CMakeLists.txt
Bundles/LeafIO/ioDicom/: CMakeLists.txt
Bundles/LeafIO/ioGdcm/: CMakeLists.txt
Bundles/LeafIO/ioITK/: CMakeLists.txt
Bundles/LeafIO/ioPacs/: CMakeLists.txt
Bundles/LeafIO/ioTuto/: CMakeLists.txt
Bundles/LeafIO/ioVTK/: CMakeLists.txt
Bundles/LeafIO/ioVtkGdcm/: CMakeLists.txt
Bundles/LeafOp/: CMakeLists.txt
Bundles/LeafOp/opImageFilter/: CMakeLists.txt
Bundles/LeafOp/opVTKMesh/: CMakeLists.txt
Bundles/LeafPatch/: CMakeLists.txt
Bundles/LeafPatch/patchMedicalData/: CMakeLists.txt
Bundles/LeafRegistration/: CMakeLists.txt
Bundles/LeafRegistration/basicRegistration/: CMakeLists.txt
Bundles/LeafUI/: CMakeLists.txt
Bundles/LeafUI/guiQt/: CMakeLists.txt
Bundles/LeafUI/monitorQt/: CMakeLists.txt
Bundles/LeafUI/uiGenericQt/: CMakeLists.txt
Bundles/LeafUI/uiIO/: CMakeLists.txt
Bundles/LeafUI/uiImageQt/: CMakeLists.txt
Bundles/LeafUI/uiImageQt/src/uiImageQt/: WindowLevel.cpp
Bundles/LeafUI/uiMeasurement/: CMakeLists.txt
Bundles/LeafUI/uiMeasurementQt/: CMakeLists.txt
Bundles/LeafUI/uiMedDataQt/: CMakeLists.txt
Bundles/LeafUI/uiPreferences/: CMakeLists.txt
Bundles/LeafUI/uiReconstructionQt/: CMakeLists.txt
Bundles/LeafUI/uiTF/: CMakeLists.txt
Bundles/LeafUI/uiTF/src/uiTF/: TransferFunctionEditor.cpp
Bundles/LeafUI/uiVisu/: CMakeLists.txt
Bundles/LeafUI/uiVisuQt/: CMakeLists.txt
Bundles/LeafUI/uiVisuQt/src/uiVisuQt/: SnapshotEditor.cpp
Bundles/LeafVisu/: CMakeLists.txt
Bundles/LeafVisu/scene2D/: CMakeLists.txt
Bundles/LeafVisu/visuVTK/: CMakeLists.txt
Bundles/LeafVisu/visuVTKAdaptor/: CMakeLists.txt
Bundles/LeafVisu/visuVTKQt/: CMakeLists.txt
Bundles/LeafVisu/visuVTKVRAdaptor/: CMakeLists.txt
Bundles/LeafVisu/vtkCompositeMesh/: CMakeLists.txt
Bundles/LeafVisu/vtkSimpleMesh/: CMakeLists.txt
Bundles/LeafVisu/vtkSimpleNegato/: CMakeLists.txt
Bundles/core/: CMakeLists.txt
Bundles/core/activities/: CMakeLists.txt
Bundles/core/appXml/: CMakeLists.txt
Bundles/core/appXml2/: CMakeLists.txt
Bundles/core/dataReg/: CMakeLists.txt
Bundles/core/gui/: CMakeLists.txt
Bundles/core/io/: CMakeLists.txt
Bundles/core/memory/: CMakeLists.txt
Bundles/core/preferences/: CMakeLists.txt
Bundles/core/preferences/src/preferences/: Plugin.cpp
Bundles/core/servicesReg/: CMakeLists.txt
Bundles/media/: CMakeLists.txt
Samples/: CMakeLists.txt
Samples/Tutorials/: CMakeLists.txt
Samples/Tutorials/Tuto01Basic/: CMakeLists.txt
SrcLib/: CMakeLists.txt
SrcLib/core/: CMakeLists.txt
SrcLib/core/fwActivities/: CMakeLists.txt
SrcLib/core/fwAtomConversion/: CMakeLists.txt
SrcLib/core/fwAtoms/: CMakeLists.txt
SrcLib/core/fwAtomsFilter/: CMakeLists.txt
SrcLib/core/fwAtomsPatch/: CMakeLists.txt
SrcLib/core/fwCamp/: CMakeLists.txt
SrcLib/core/fwCom/: CMakeLists.txt
SrcLib/core/fwComEd/: CMakeLists.txt
SrcLib/core/fwCommand/: CMakeLists.txt
SrcLib/core/fwCore/: CMakeLists.txt
SrcLib/core/fwData/: CMakeLists.txt
SrcLib/core/fwDataCamp/: CMakeLists.txt
SrcLib/core/fwDataIO/: CMakeLists.txt
SrcLib/core/fwDataIO/src/fwDataIO/reader/: DictionaryReader.cpp
SrcLib/core/fwDataTools/: CMakeLists.txt
SrcLib/core/fwDicomTools/: CMakeLists.txt
SrcLib/core/fwGui/: CMakeLists.txt
SrcLib/core/fwGuiQt/: CMakeLists.txt
SrcLib/core/fwJobs/: CMakeLists.txt
SrcLib/core/fwLog/: CMakeLists.txt
SrcLib/core/fwMath/: CMakeLists.txt
SrcLib/core/fwMedData/: CMakeLists.txt
SrcLib/core/fwMedDataTools/: CMakeLists.txt
SrcLib/core/fwMemory/: CMakeLists.txt
SrcLib/core/fwRender/: CMakeLists.txt
SrcLib/core/fwRuntime/: CMakeLists.txt
SrcLib/core/fwRuntime/src/io/: BundleDescriptorReader.cpp  ProfileReader.cpp
SrcLib/core/fwServices/: CMakeLists.txt
SrcLib/core/fwThread/: CMakeLists.txt
SrcLib/core/fwTools/: CMakeLists.txt
SrcLib/core/fwZip/: CMakeLists.txt
SrcLib/io/: CMakeLists.txt
SrcLib/io/fwAtomsBoostIO/: CMakeLists.txt
SrcLib/io/fwDcmtkIO/: CMakeLists.txt
SrcLib/io/fwDcmtkTools/: CMakeLists.txt
SrcLib/io/fwDicomIOFilter/: CMakeLists.txt
SrcLib/io/fwGdcmIO/: CMakeLists.txt
SrcLib/io/fwItkIO/: CMakeLists.txt
SrcLib/io/fwPacsIO/: CMakeLists.txt
SrcLib/io/fwVtkIO/: CMakeLists.txt
SrcLib/io/vtkGdcmIO/: CMakeLists.txt
SrcLib/patch/: CMakeLists.txt
SrcLib/patch/fwMDSemanticPatch/: CMakeLists.txt
SrcLib/patch/fwMDSemanticPatch/src/fwMDSemanticPatch/: PatchLoader.cpp
SrcLib/patch/fwStructuralPatch/: CMakeLists.txt
SrcLib/ui/: CMakeLists.txt
SrcLib/ui/fwDicomIOFilterQt/: CMakeLists.txt
SrcLib/visu/: CMakeLists.txt
SrcLib/visu/fwRenderVTK/: CMakeLists.txt
fwlauncher/: CMakeLists.txt
(+2 files in other folders)
