add_subdirectory(2DVisualizationActivity)
add_subdirectory(3DVisualizationActivity)
add_subdirectory(blendActivity)
add_subdirectory(dicomAppConfig)
add_subdirectory(dicomFilteringActivity)
add_subdirectory(dicomPacsReaderActivity)
add_subdirectory(dicomPacsWriterActivity)
add_subdirectory(ioActivity)
add_subdirectory(volumeRenderingActivity)