add_subdirectory(guiQt)
add_subdirectory(monitorQt)
add_subdirectory(uiGenericQt)
add_subdirectory(uiImageQt)
add_subdirectory(uiIO)
add_subdirectory(uiMeasurement)
add_subdirectory(uiMeasurementQt)
add_subdirectory(uiMedDataQt)
add_subdirectory(uiPreferences)
add_subdirectory(uiReconstructionQt)
add_subdirectory(uiTF)
add_subdirectory(uiVisu)
add_subdirectory(uiVisuQt)