add_subdirectory(fwActivities)
add_subdirectory(fwAtomConversion)
add_subdirectory(fwAtoms)
add_subdirectory(fwAtomsFilter)
add_subdirectory(fwAtomsPatch)
add_subdirectory(fwCamp)
add_subdirectory(fwCom)
add_subdirectory(fwComEd)
add_subdirectory(fwCommand)
add_subdirectory(fwCore)
add_subdirectory(fwData)
add_subdirectory(fwDataCamp)
add_subdirectory(fwDataIO)
add_subdirectory(fwDataTools)
add_subdirectory(fwDicomTools)
add_subdirectory(fwGui)
add_subdirectory(fwGuiQt)
add_subdirectory(fwJobs)
add_subdirectory(fwLog)
add_subdirectory(fwMath)
add_subdirectory(fwMedData)
add_subdirectory(fwMedDataTools)
add_subdirectory(fwMemory)
add_subdirectory(fwRender)
add_subdirectory(fwRuntime)
add_subdirectory(fwServices)
add_subdirectory(fwThread)
add_subdirectory(fwTools)
add_subdirectory(fwZip)